Prevent wrapping of inline math and fix landscape text scaling

--- a/static/archive.css
+++ b/static/archive.css
@@ -16,7 +16,8 @@ html {
 }
 
 body {
-  padding: 1em;
+  padding: calc(env(safe-area-inset-top) + 1em) calc(env(safe-area-inset-right) + 1em)
+    calc(env(safe-area-inset-bottom) + 1em) calc(env(safe-area-inset-left) + 1em);
   max-width: 40em;
   width: 100%;
   margin: auto;
@@ -109,6 +110,10 @@ code {
 
 .katex-display.overflow .katex-html {
   padding-left: var(--offset);
+}
+
+.no-wrap {
+  white-space: nowrap;
 }
 
 blockquote {
